Added recipe table and mechanism for filling it.

--- a/src/main/resources/text/messages_en.properties
+++ b/src/main/resources/text/messages_en.properties
@@ -1,7 +1,39 @@
 #Common
 cz.afrosoft.whattoeat.title=WhatToEat
+cz.afrosoft.whattoeat.value.empty=
 #Common end
 
 #Menu
 cz.afrosoft.whattoeat.menu.recipes=Recipes
 #Menu end
+
+#Recipes
+cz.afrosoft.whattoeat.recipes.filter.title=Filter:
+
+cz.afrosoft.whattoeat.recipes.actions.title=Actions
+
+cz.afrosoft.whattoeat.recipes.table.header.name=Name
+cz.afrosoft.whattoeat.recipes.table.header.recipeType=Type
+cz.afrosoft.whattoeat.recipes.table.header.taste=Taste
+cz.afrosoft.whattoeat.recipes.table.header.preparationTime=Time
+cz.afrosoft.whattoeat.recipes.table.header.rating=Rating
+cz.afrosoft.whattoeat.recipes.table.header.keywords=Keywords
+#Recipes end
+
+#Data model
+cz.afrosoft.whattoeat.recipeType.breakfast=Breakfast
+cz.afrosoft.whattoeat.recipeType.snack=Snack
+cz.afrosoft.whattoeat.recipeType.lunch=Lunch
+cz.afrosoft.whattoeat.recipeType.soup=Soup
+cz.afrosoft.whattoeat.recipeType.dinner=Dinner
+cz.afrosoft.whattoeat.recipeType.sideDish=Side dish
+cz.afrosoft.whattoeat.recipeType.dessert=Dessert
+
+cz.afrosoft.whattoeat.taste.sweet=Sweet
+cz.afrosoft.whattoeat.taste.salty=Salty
+cz.afrosoft.whattoeat.taste.neutral=Neutral
+
+cz.afrosoft.whattoeat.preparationTime.short=Short
+cz.afrosoft.whattoeat.preparationTime.medium=Medium
+cz.afrosoft.whattoeat.preparationTime.long=Long
+#Data model end
