--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -1,7 +1,39 @@
 #Common
 cz.afrosoft.whattoeat.title=Co k \u017er\u00e1dlu
+cz.afrosoft.whattoeat.value.empty=
 #Common end
 
 #Menu
 cz.afrosoft.whattoeat.menu.recipes=Recepty
 #Menu end
+
+#Recipes
+cz.afrosoft.whattoeat.recipes.filter.title=Filtrovat:
+
+cz.afrosoft.whattoeat.recipes.actions.title=Akce
+
+cz.afrosoft.whattoeat.recipes.table.header.name=Jm\u00e9no
+cz.afrosoft.whattoeat.recipes.table.header.recipeType=Typ
+cz.afrosoft.whattoeat.recipes.table.header.taste=Chu\u0165
+cz.afrosoft.whattoeat.recipes.table.header.preparationTime=\u010cas
+cz.afrosoft.whattoeat.recipes.table.header.rating=Hodnocen\u00ed
+cz.afrosoft.whattoeat.recipes.table.header.keywords=Kl\u00ed\u010dov\u00e1 slova
+#Recipes end
+
+#Data model
+cz.afrosoft.whattoeat.recipeType.breakfast=Sn\u00eddan\u011b
+cz.afrosoft.whattoeat.recipeType.snack=Sva\u010dina
+cz.afrosoft.whattoeat.recipeType.lunch=Ob\u011bd
+cz.afrosoft.whattoeat.recipeType.soup=Pol\u00e9vka
+cz.afrosoft.whattoeat.recipeType.dinner=Ve\u010de\u0159e
+cz.afrosoft.whattoeat.recipeType.sideDish=P\u0159\u00edloha
+cz.afrosoft.whattoeat.recipeType.dessert=Dezert
+
+cz.afrosoft.whattoeat.taste.sweet=Sladk\u00e9
+cz.afrosoft.whattoeat.taste.salty=Slan\u00e9
+cz.afrosoft.whattoeat.taste.neutral=Neutr\u00e1ln\u00ed
+
+cz.afrosoft.whattoeat.preparationTime.short=Kr\u00e1tk\u00fd
+cz.afrosoft.whattoeat.preparationTime.medium=St\u0159edn\u00ed
+cz.afrosoft.whattoeat.preparationTime.long=Dlouh\u00fd
+#Data model end
