Added recipe view dialog.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -11,6 +11,7 @@ cz.afrosoft.whattoeat.menu.recipes=Recepty
 cz.afrosoft.whattoeat.recipes.filter.title=Filtrovat:
 
 cz.afrosoft.whattoeat.recipes.actions.title=Akce
+cz.afrosoft.whattoeat.recipes.actions.view=Z
 
 cz.afrosoft.whattoeat.recipes.table.header.name=Jm\u00e9no
 cz.afrosoft.whattoeat.recipes.table.header.recipeType=Typ
@@ -18,6 +19,12 @@ cz.afrosoft.whattoeat.recipes.table.header.taste=Chu\u0165
 cz.afrosoft.whattoeat.recipes.table.header.preparationTime=\u010cas
 cz.afrosoft.whattoeat.recipes.table.header.rating=Hodnocen\u00ed
 cz.afrosoft.whattoeat.recipes.table.header.keywords=Kl\u00ed\u010dov\u00e1 slova
+
+cz.afrosoft.whattoeat.recipes.view.properties.title=Vlastnosti
+cz.afrosoft.whattoeat.recipes.view.preparation.title=P\u0159\u00edprava
+cz.afrosoft.whattoeat.recipes.view.ingredients.title=Ingredience
+cz.afrosoft.whattoeat.recipes.view.ingredients.servings=Porc\u00ed:
+cz.afrosoft.whattoeat.recipes.view.ingredients.price=Cena:
 #Recipes end
 
 #Data model
@@ -36,4 +43,8 @@ cz.afrosoft.whattoeat.taste.neutral=Neutr\u00e1ln\u00ed
 cz.afrosoft.whattoeat.preparationTime.short=Kr\u00e1tk\u00fd
 cz.afrosoft.whattoeat.preparationTime.medium=St\u0159edn\u00ed
 cz.afrosoft.whattoeat.preparationTime.long=Dlouh\u00fd
+
+cz.afrosoft.whattoeat.ingredientUnit.piece=ks
+cz.afrosoft.whattoeat.ingredientUnit.weight=g
+cz.afrosoft.whattoeat.ingredientUnit.volume=ml
 #Data model end
