--- a/src/main/resources/text/messages_en.properties
+++ b/src/main/resources/text/messages_en.properties
@@ -11,6 +11,7 @@ cz.afrosoft.whattoeat.menu.recipes=Recipes
 cz.afrosoft.whattoeat.recipes.filter.title=Filter:
 
 cz.afrosoft.whattoeat.recipes.actions.title=Actions
+cz.afrosoft.whattoeat.recipes.actions.view=V
 
 cz.afrosoft.whattoeat.recipes.table.header.name=Name
 cz.afrosoft.whattoeat.recipes.table.header.recipeType=Type
@@ -18,6 +19,12 @@ cz.afrosoft.whattoeat.recipes.table.header.taste=Taste
 cz.afrosoft.whattoeat.recipes.table.header.preparationTime=Time
 cz.afrosoft.whattoeat.recipes.table.header.rating=Rating
 cz.afrosoft.whattoeat.recipes.table.header.keywords=Keywords
+
+cz.afrosoft.whattoeat.recipes.view.properties.title=Properties
+cz.afrosoft.whattoeat.recipes.view.preparation.title=Preparation
+cz.afrosoft.whattoeat.recipes.view.ingredients.title=Ingredients
+cz.afrosoft.whattoeat.recipes.view.ingredients.servings=Servings:
+cz.afrosoft.whattoeat.recipes.view.ingredients.price=Price:
 #Recipes end
 
 #Data model
@@ -36,4 +43,8 @@ cz.afrosoft.whattoeat.taste.neutral=Neutral
 cz.afrosoft.whattoeat.preparationTime.short=Short
 cz.afrosoft.whattoeat.preparationTime.medium=Medium
 cz.afrosoft.whattoeat.preparationTime.long=Long
+
+cz.afrosoft.whattoeat.ingredientUnit.piece=pcs
+cz.afrosoft.whattoeat.ingredientUnit.weight=g
+cz.afrosoft.whattoeat.ingredientUnit.volume=ml
 #Data model end
