--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,11 @@
 FEATURES:
 - Add dialg for creating new recipes and ingredients.
 - Ingredients with PIECE type should support fraction values and round them up in view.
-- Add service for computing recipe price.
+X - Add service for computing recipe price.
 - Add UI for food list generator.
+- Add config file for setting application settings.
+- Add file coding settings.
 
 BUGS:
 X - Ingredient keywords overlaps in recipe detail dialog.
+- Check if all file operations closes their streams.
