UI Template for generator.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -5,6 +5,7 @@ cz.afrosoft.whattoeat.value.empty=
 
 #Menu
 cz.afrosoft.whattoeat.menu.recipes=Recepty
+cz.afrosoft.whattoeat.menu.diet.generator=Generovat
 #Menu end
 
 #Recipes
@@ -26,6 +27,22 @@ cz.afrosoft.whattoeat.recipes.view.ingredients.title=Ingredience
 cz.afrosoft.whattoeat.recipes.view.ingredients.servings=Porc\u00ed:
 cz.afrosoft.whattoeat.recipes.view.ingredients.price=Cena:
 #Recipes end
+
+#Diet generator
+cz.afrosoft.whattoeat.diet.generator.input.name=Jm\u00e9no:
+cz.afrosoft.whattoeat.diet.generator.input.from=Od:
+cz.afrosoft.whattoeat.diet.generator.input.to=Do:
+cz.afrosoft.whattoeat.diet.generator.input.generator=Gener\u00e1tor:
+cz.afrosoft.whattoeat.diet.generator.input.dishes=Chody:
+cz.afrosoft.whattoeat.diet.generator.input.breakfast=Sn\u00eddan\u011b:
+cz.afrosoft.whattoeat.diet.generator.input.morningSnack=Dopoledn\u00ed sva\u010dina:
+cz.afrosoft.whattoeat.diet.generator.input.afternoonSnack=Odpoledn\u00ed sva\u010dina:
+cz.afrosoft.whattoeat.diet.generator.input.soup=Pol\u00e9vka:
+cz.afrosoft.whattoeat.diet.generator.input.lunch=Ob\u011bd:
+cz.afrosoft.whattoeat.diet.generator.input.sideDish=P\u0159\u00edloha:
+cz.afrosoft.whattoeat.diet.generator.input.dinner=Ve\u010de\u0159e:
+
+#Diet generator end
 
 #Data model
 cz.afrosoft.whattoeat.recipeType.breakfast=Sn\u00eddan\u011b
