--- a/src/main/resources/text/messages_en.properties
+++ b/src/main/resources/text/messages_en.properties
@@ -5,6 +5,7 @@ cz.afrosoft.whattoeat.value.empty=
 
 #Menu
 cz.afrosoft.whattoeat.menu.recipes=Recipes
+cz.afrosoft.whattoeat.menu.diet.generator=Generate
 #Menu end
 
 #Recipes
