Added more granularity to preparation times.

--- a/src/main/resources/text/messages_en.properties
+++ b/src/main/resources/text/messages_en.properties
@@ -41,6 +41,8 @@ cz.afrosoft.whattoeat.taste.sweet=Sweet
 cz.afrosoft.whattoeat.taste.salty=Salty
 cz.afrosoft.whattoeat.taste.neutral=Neutral
 
+cz.afrosoft.whattoeat.preparationTime.instant=Instant
+cz.afrosoft.whattoeat.preparationTime.quick=Quick
 cz.afrosoft.whattoeat.preparationTime.short=Short
 cz.afrosoft.whattoeat.preparationTime.medium=Medium
 cz.afrosoft.whattoeat.preparationTime.long=Long
