--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -57,6 +57,8 @@ cz.afrosoft.whattoeat.taste.sweet=Sladk\u00e9
 cz.afrosoft.whattoeat.taste.salty=Slan\u00e9
 cz.afrosoft.whattoeat.taste.neutral=Neutr\u00e1ln\u00ed
 
+cz.afrosoft.whattoeat.preparationTime.instant=Okam\u017eit\u00fd
+cz.afrosoft.whattoeat.preparationTime.quick=Rychl\u00fd
 cz.afrosoft.whattoeat.preparationTime.short=Kr\u00e1tk\u00fd
 cz.afrosoft.whattoeat.preparationTime.medium=St\u0159edn\u00ed
 cz.afrosoft.whattoeat.preparationTime.long=Dlouh\u00fd
