Added basic generator mechanism and example random generator.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -41,6 +41,9 @@ cz.afrosoft.whattoeat.diet.generator.input.soup=Pol\u00e9vka:
 cz.afrosoft.whattoeat.diet.generator.input.lunch=Ob\u011bd:
 cz.afrosoft.whattoeat.diet.generator.input.sideDish=P\u0159\u00edloha:
 cz.afrosoft.whattoeat.diet.generator.input.dinner=Ve\u010de\u0159e:
+cz.afrosoft.whattoeat.diet.generator.input.generate=Generovat
+
+cz.afrosoft.whattoeat.diet.generator.dialog.generated.header=J\u00eddeln\u00ed\u010dek vygenerov\u00e1n
 
 #Diet generator end
 
@@ -67,3 +70,8 @@ cz.afrosoft.whattoeat.ingredientUnit.piece=ks
 cz.afrosoft.whattoeat.ingredientUnit.weight=g
 cz.afrosoft.whattoeat.ingredientUnit.volume=ml
 #Data model end
+
+#Dialog titles
+cz.afrosoft.whattoeat.dialog.error.title=Chyba
+cz.afrosoft.whattoeat.dialog.info.title=Informace
+#Dialog titles end
