Added basic variant of dialog for adding recipes.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -13,6 +13,7 @@ cz.afrosoft.whattoeat.recipes.filter.title=Filtrovat:
 
 cz.afrosoft.whattoeat.recipes.actions.title=Akce
 cz.afrosoft.whattoeat.recipes.actions.view=Z
+cz.afrosoft.whattoeat.recipes.actions.add=P
 
 cz.afrosoft.whattoeat.recipes.table.header.name=Jm\u00e9no
 cz.afrosoft.whattoeat.recipes.table.header.recipeType=Typ
@@ -26,6 +27,18 @@ cz.afrosoft.whattoeat.recipes.view.preparation.title=P\u0159\u00edprava
 cz.afrosoft.whattoeat.recipes.view.ingredients.title=Ingredience
 cz.afrosoft.whattoeat.recipes.view.ingredients.servings=Porc\u00ed:
 cz.afrosoft.whattoeat.recipes.view.ingredients.price=Cena:
+
+cz.afrosoft.whattoeat.recipes.add.name=Jm\u00e9no:
+cz.afrosoft.whattoeat.recipes.add.type=Typ:
+cz.afrosoft.whattoeat.recipes.add.taste=Chu\u0165:
+cz.afrosoft.whattoeat.recipes.add.time=\u010cas:
+cz.afrosoft.whattoeat.recipes.add.rating=Hodnocen\u00ed:
+cz.afrosoft.whattoeat.recipes.add.keywords=Kl\u00ed\u010dov\u00e1 slova:
+cz.afrosoft.whattoeat.recipes.add.ingredients=Ingredience:
+cz.afrosoft.whattoeat.recipes.add.ingredients.name=Jm\u00e9no:
+cz.afrosoft.whattoeat.recipes.add.ingredients.quantity=Mno\u017estv\u00ed:
+cz.afrosoft.whattoeat.recipes.add.preparation=P\u0159\u00edprava:
+
 #Recipes end
 
 #Diet generator
