--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,17 @@
 FEATURES:
 - Add dialg for creating new recipes and ingredients.
+    - Styling dialog
+    - Add way to remove added keywords
+    - Add internationalization for combo box values.
+    - Add way to remove ingredients
+    - Add validations
+    - Add possible side dishes
+
 X - Ingredients with PIECE type should support fraction values and round them up in view.
 X - Add service for computing recipe price.
 X - Add UI for food list generator.
 - Create mechanism for Generator with custom settings
-- Create view forgenerated food lists
+- Create view for generated food lists
 - Create mechanism for manual editing of generated food list before saving
 X - Display error dialog when recipe cannot be displayed because of invalid ingredient info
 - Translate new cz messages to en
