Added possibility to specify side dishes for linch and dinner in add recipe dialog.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -34,10 +34,12 @@ cz.afrosoft.whattoeat.recipes.add.taste=Chu\u0165:
 cz.afrosoft.whattoeat.recipes.add.time=\u010cas:
 cz.afrosoft.whattoeat.recipes.add.rating=Hodnocen\u00ed:
 cz.afrosoft.whattoeat.recipes.add.keywords=Kl\u00ed\u010dov\u00e1 slova:
-cz.afrosoft.whattoeat.recipes.add.ingredients=Ingredience:
+cz.afrosoft.whattoeat.recipes.add.ingredients=Ingredience
 cz.afrosoft.whattoeat.recipes.add.ingredients.name=Jm\u00e9no:
 cz.afrosoft.whattoeat.recipes.add.ingredients.quantity=Mno\u017estv\u00ed:
-cz.afrosoft.whattoeat.recipes.add.preparation=P\u0159\u00edprava:
+cz.afrosoft.whattoeat.recipes.add.preparation=P\u0159\u00edprava
+cz.afrosoft.whattoeat.recipes.add.sideDishes=P\u0159\u00edlohy
+cz.afrosoft.whattoeat.recipes.add.sideDishes.name=Jm\u00e9no:
 
 #Recipes end
 
