Added backend recipe validation.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -41,6 +41,15 @@ cz.afrosoft.whattoeat.recipes.add.preparation=P\u0159\u00edprava
 cz.afrosoft.whattoeat.recipes.add.sideDishes=P\u0159\u00edlohy
 cz.afrosoft.whattoeat.recipes.add.sideDishes.name=Jm\u00e9no:
 
+## Validations
+cz.afrosoft.whattoeat.recipes.error.null=Recept nem\u016f\u017ee b\u00fdt null.
+cz.afrosoft.whattoeat.recipes.error.name.required=Jm\u00e9no mus\u00ed b\u00fdt vypln\u011bno.
+cz.afrosoft.whattoeat.recipes.error.type.required=Typ receptu mus\u00ed b\u00fdt vypln\u011bn.
+cz.afrosoft.whattoeat.recipes.error.taste.required=Chu\u0165 receptu mus\u00ed b\u00fdt vypln\u011bna.
+cz.afrosoft.whattoeat.recipes.error.time.required=\u010cas p\u0159\u00edpravy mus\u00ed b\u00fdt vypln\u011bn.
+cz.afrosoft.whattoeat.recipes.error.preparation=P\u0159\u00edprava mus\u00ed b\u00fdt vypln\u011bna.
+cz.afrosoft.whattoeat.recipes.error.ingeients=Recept mus\u00ed obsahovat alespo\u0148 jednu ingredienci.
+
 #Recipes end
 
 #Diet generator
