--- a/todo.txt
+++ b/todo.txt
@@ -10,6 +10,7 @@ FEATURES:
     X - Add validations
     - Add validation errors to UI
     X - Add possible side dishes
+    X - Suggestions should stay open even for exact match
 
 X - Ingredients with PIECE type should support fraction values and round them up in view.
 X - Add service for computing recipe price.
