View for list of diets.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -99,3 +99,11 @@ cz.afrosoft.whattoeat.ingredientUnit.volume=ml
 cz.afrosoft.whattoeat.dialog.error.title=Chyba
 cz.afrosoft.whattoeat.dialog.info.title=Informace
 #Dialog titles end
+
+#Diet list
+cz.afrosoft.whattoeat.dietlist.table.name=Jm\u00e9no
+cz.afrosoft.whattoeat.dietlist.table.from=Od
+cz.afrosoft.whattoeat.dietlist.table.to=Do
+
+cz.afrosoft.whattoeat.dietlist.action.view=Z
+#Diet list end
