View of diets and diet.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -106,4 +106,15 @@ cz.afrosoft.whattoeat.dietlist.table.from=Od
 cz.afrosoft.whattoeat.dietlist.table.to=Do
 
 cz.afrosoft.whattoeat.dietlist.action.view=Z
+
+cz.afrosoft.whattoeat.dietview.table.day=Den
+cz.afrosoft.whattoeat.dietview.table.breakfast=Sn\u00eddan\u011b
+cz.afrosoft.whattoeat.dietview.table.morningSnack=Dopoledn\u00ed sva\u010dina
+cz.afrosoft.whattoeat.dietview.table.afternoonSnack=Odpoledn\u00ed sva\u010dina
+cz.afrosoft.whattoeat.dietview.table.soup=Pol\u00e9vka
+cz.afrosoft.whattoeat.dietview.table.lunch=Ob\u011bd
+cz.afrosoft.whattoeat.dietview.table.sideDish=P\u0159\u00edloha
+cz.afrosoft.whattoeat.dietview.table.dinner=Ve\u010de\u0159e
+
+cz.afrosoft.whattoeat.dietview.action.show=Z
 #Diet list end
