--- a/todo.txt
+++ b/todo.txt
@@ -11,19 +11,30 @@ FEATURES:
     - Add validation errors to UI
     X - Add possible side dishes
     X - Suggestions should stay open even for exact match
-
+- Recipe view dialog
+    - styling so preparation has more space and whole dialog space is used even
+    when some categories are closed
 X - Ingredients with PIECE type should support fraction values and round them up in view.
 X - Add service for computing recipe price.
 X - Add UI for food list generator.
 - Create mechanism for Generator with custom settings
-- Create view for generated food lists
-- Create mechanism for manual editing of generated food list before saving
+X - Create view for generated food lists
+- Diet view
+    - Create mechanism for manual editing of generated food lists
+    - Update DayDiet to contain numer of servings which will be used for shopping list generation
+    - Add editation mechanism for number of servings
+    - Add shopping list generation from selected recipes
+    - Show recipe on double cilck
+
+- Show diet view on double click
+- Add ability to delete diet
 X - Display error dialog when recipe cannot be displayed because of invalid ingredient info
 - Translate new cz messages to en
 - Add config file for setting application settings.
 - Add file coding settings.
-X- Add possibility to open recipe by double click in recipe view table.
+X - Add possibility to open recipe by double click in recipe view table.
 
 BUGS:
 X - Ingredient keywords overlaps in recipe detail dialog.
 - Check if all file operations closes their streams.
+- Fix random generator to work even if no recipes are available for some type.
