Added conversion table for weight to average pieces. Added specific conversion for garlic.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -52,6 +52,12 @@ cz.afrosoft.whattoeat.recipes.error.ingeients=Recept mus\u00ed obsahovat alespo\
 
 #Recipes end
 
+#Ingredient specific piece conversion ingredient names
+cz.afrosoft.whattoeat.ingredient.piece.conversion.garlic.name=\u010desnek
+cz.afrosoft.whattoeat.ingredient.piece.conversion.garlic.clove=strou\u017eek
+cz.afrosoft.whattoeat.ingredient.piece.conversion.garlic.bulb=pali\u010dka
+#Ingredient specific piece conversion ingredient names end
+
 #Diet generator
 cz.afrosoft.whattoeat.diet.generator.input.name=Jm\u00e9no:
 cz.afrosoft.whattoeat.diet.generator.input.from=Od:
