change of selection model

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -112,6 +112,7 @@ cz.afrosoft.whattoeat.dietlist.table.from=Od
 cz.afrosoft.whattoeat.dietlist.table.to=Do
 
 cz.afrosoft.whattoeat.dietlist.action.view=Z
+cz.afrosoft.whattoeat.dietlist.action.shopping=N
 
 cz.afrosoft.whattoeat.dietview.table.day=Den
 cz.afrosoft.whattoeat.dietview.table.breakfast=Sn\u00eddan\u011b
