Shopping list dialog.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -112,7 +112,7 @@ cz.afrosoft.whattoeat.dietlist.table.from=Od
 cz.afrosoft.whattoeat.dietlist.table.to=Do
 
 cz.afrosoft.whattoeat.dietlist.action.view=Z
-cz.afrosoft.whattoeat.dietlist.action.shopping=N
+
 
 cz.afrosoft.whattoeat.dietview.table.day=Den
 cz.afrosoft.whattoeat.dietview.table.breakfast=Sn\u00eddan\u011b
@@ -124,4 +124,7 @@ cz.afrosoft.whattoeat.dietview.table.sideDish=P\u0159\u00edloha
 cz.afrosoft.whattoeat.dietview.table.dinner=Ve\u010de\u0159e
 
 cz.afrosoft.whattoeat.dietview.action.show=Z
+cz.afrosoft.whattoeat.dietview.action.shopping=N
+
+cz.afrosoft.whattoeat.dietview.dialog.shoppping.title=N\u00e1kupn\u00ed l\u00edstek
 #Diet list end
