Added new recipes. Preparation text area now wraps text. Updated garlic conversion table.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -90,11 +90,11 @@ cz.afrosoft.whattoeat.taste.sweet=Sladk\u00e9
 cz.afrosoft.whattoeat.taste.salty=Slan\u00e9
 cz.afrosoft.whattoeat.taste.neutral=Neutr\u00e1ln\u00ed
 
-cz.afrosoft.whattoeat.preparationTime.instant=Okam\u017eit\u00fd
-cz.afrosoft.whattoeat.preparationTime.quick=Rychl\u00fd
-cz.afrosoft.whattoeat.preparationTime.short=Kr\u00e1tk\u00fd
-cz.afrosoft.whattoeat.preparationTime.medium=St\u0159edn\u00ed
-cz.afrosoft.whattoeat.preparationTime.long=Dlouh\u00fd
+cz.afrosoft.whattoeat.preparationTime.instant=Okam\u017eit\u00fd (<3m)
+cz.afrosoft.whattoeat.preparationTime.quick=Rychl\u00fd (<10m)
+cz.afrosoft.whattoeat.preparationTime.short=Kr\u00e1tk\u00fd (<30m)
+cz.afrosoft.whattoeat.preparationTime.medium=St\u0159edn\u00ed (<1h)
+cz.afrosoft.whattoeat.preparationTime.long=Dlouh\u00fd (>1h)
 
 cz.afrosoft.whattoeat.ingredientUnit.piece=ks
 cz.afrosoft.whattoeat.ingredientUnit.weight=g
