Added ingredients table.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -5,6 +5,7 @@ cz.afrosoft.whattoeat.value.empty=
 
 #Menu
 cz.afrosoft.whattoeat.menu.recipes=Recepty
+cz.afrosoft.whattoeat.menu.ingredients=Ingredience
 cz.afrosoft.whattoeat.menu.diet.generator=Generovat
 #Menu end
 
@@ -57,6 +58,19 @@ cz.afrosoft.whattoeat.ingredient.piece.conversion.garlic.name=\u010desnek
 cz.afrosoft.whattoeat.ingredient.piece.conversion.garlic.clove=strou\u017eek
 cz.afrosoft.whattoeat.ingredient.piece.conversion.garlic.bulb=pali\u010dka
 #Ingredient specific piece conversion ingredient names end
+
+#Ingredients
+cz.afrosoft.whattoeat.ingredients.actions.title=Akce
+cz.afrosoft.whattoeat.ingredients.actions.add=P
+cz.afrosoft.whattoeat.ingredients.actions.edit=E
+cz.afrosoft.whattoeat.ingredients.actions.delete=D
+
+cz.afrosoft.whattoeat.ingredients.table.header.name=Jm\u00e9no
+cz.afrosoft.whattoeat.ingredients.table.header.unit=Jednotka
+cz.afrosoft.whattoeat.ingredients.table.header.conversion=g/ks
+cz.afrosoft.whattoeat.ingredients.table.header.price=Cena
+cz.afrosoft.whattoeat.ingredients.table.header.keywords=Kl\u00ed\u010dov\u00e1 slova
+#Ingredients end
 
 #Diet generator
 cz.afrosoft.whattoeat.diet.generator.input.name=Jm\u00e9no:
