Basic variant of dialog for ingredient edit. Deleting of ingredients.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -63,13 +63,22 @@ cz.afrosoft.whattoeat.ingredient.piece.conversion.garlic.bulb=pali\u010dka
 cz.afrosoft.whattoeat.ingredients.actions.title=Akce
 cz.afrosoft.whattoeat.ingredients.actions.add=P
 cz.afrosoft.whattoeat.ingredients.actions.edit=E
-cz.afrosoft.whattoeat.ingredients.actions.delete=D
+cz.afrosoft.whattoeat.ingredients.actions.delete=S
 
 cz.afrosoft.whattoeat.ingredients.table.header.name=Jm\u00e9no
 cz.afrosoft.whattoeat.ingredients.table.header.unit=Jednotka
 cz.afrosoft.whattoeat.ingredients.table.header.conversion=g/ks
 cz.afrosoft.whattoeat.ingredients.table.header.price=Cena
 cz.afrosoft.whattoeat.ingredients.table.header.keywords=Kl\u00ed\u010dov\u00e1 slova
+
+cz.afrosoft.whattoeat.ingredients.dialog.name=Jm\u00e9no:
+cz.afrosoft.whattoeat.ingredients.dialog.unit=Jednotka:
+cz.afrosoft.whattoeat.ingredients.dialog.price=Cena za jednotku:
+cz.afrosoft.whattoeat.ingredients.dialog.conversion=Pr\u016fm\u011brn\u00fd po\u010det jednotek na kus:
+cz.afrosoft.whattoeat.ingredients.dialog.keywords=Kl\u00ed\u010dov\u00e1 slova:
+
+cz.afrosoft.whattoeat.dialog.delete.ingredient.title=Smaz\u00e1n\u00ed ingredience
+cz.afrosoft.whattoeat.dialog.delete.ingredient.messages=Opravdu chcete smazat vybranou ingredienci?
 #Ingredients end
 
 #Diet generator
@@ -118,6 +127,7 @@ cz.afrosoft.whattoeat.ingredientUnit.volume=ml
 #Dialog titles
 cz.afrosoft.whattoeat.dialog.error.title=Chyba
 cz.afrosoft.whattoeat.dialog.info.title=Informace
+cz.afrosoft.whattoeat.dialog.confirm.title=Potvrzen\u00ed
 #Dialog titles end
 
 #Diet list
