--- a/todo.txt
+++ b/todo.txt
@@ -3,16 +3,17 @@
 
 ----- ARCHITECTURE -----------------------------------------------------------------------------------------------------
 - Create ER diagram and validate each attribute
-- Add UUID to every entity and migrate existing data
+- Use recipe UUIDs in diets
 
 Done:
+X - Add UUID to every entity and migrate existing data
 ----- FEATURES ---------------------------------------------------------------------------------------------------------
 - Add dialg for creating new recipes and ingredients.
     X - Basic dialog.
     - Styling dialog
     - Add way to remove added keywords
     - Add way to remove ingredients and side dishes
-    - Add way to edit added ingredient quantity
+    - Add way to edit added recipeIngredient quantity
     - Add internationalization for combo box values.
     - Add way to remove ingredients
     X - Add validations
@@ -41,7 +42,7 @@ Done:
 
 Done:
 X - Add possibility to open recipe by double click in recipe view table.
-X - Display error dialog when recipe cannot be displayed because of invalid ingredient info
+X - Display error dialog when recipe cannot be displayed because of invalid recipeIngredient info
 X - Show diet view on double click
 X - Ingredients with PIECE type should support fraction values and round them up in view.
 X - Add service for computing recipe price.
