Fixed errors in refactoring of ingredient name to ingredient key.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -65,13 +65,13 @@ cz.afrosoft.whattoeat.ingredients.actions.add=P
 cz.afrosoft.whattoeat.ingredients.actions.edit=E
 cz.afrosoft.whattoeat.ingredients.actions.delete=S
 
-cz.afrosoft.whattoeat.ingredients.table.header.ingredientKey=Jm\u00e9no
+cz.afrosoft.whattoeat.ingredients.table.header.name=Jm\u00e9no
 cz.afrosoft.whattoeat.ingredients.table.header.unit=Jednotka
 cz.afrosoft.whattoeat.ingredients.table.header.conversion=g/ks
 cz.afrosoft.whattoeat.ingredients.table.header.price=Cena
 cz.afrosoft.whattoeat.ingredients.table.header.keywords=Kl\u00ed\u010dov\u00e1 slova
 
-cz.afrosoft.whattoeat.ingredients.dialog.ingredientKey=Jm\u00e9no:
+cz.afrosoft.whattoeat.ingredients.dialog.name=Jm\u00e9no:
 cz.afrosoft.whattoeat.ingredients.dialog.unit=Jednotka:
 cz.afrosoft.whattoeat.ingredients.dialog.price=Cena za jednotku:
 cz.afrosoft.whattoeat.ingredients.dialog.conversion=Pr\u016fm\u011brn\u00fd po\u010det jednotek na kus:
