--- a/src/main/resources/text/messages_en.properties
+++ b/src/main/resources/text/messages_en.properties
@@ -14,7 +14,7 @@ cz.afrosoft.whattoeat.recipes.filter.title=Filter:
 cz.afrosoft.whattoeat.recipes.actions.title=Actions
 cz.afrosoft.whattoeat.recipes.actions.view=V
 
-cz.afrosoft.whattoeat.recipes.table.header.ingredientKey=Name
+cz.afrosoft.whattoeat.recipes.table.header.name=Name
 cz.afrosoft.whattoeat.recipes.table.header.recipeType=Type
 cz.afrosoft.whattoeat.recipes.table.header.taste=Taste
 cz.afrosoft.whattoeat.recipes.table.header.preparationTime=Time
