--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -15,6 +15,8 @@ cz.afrosoft.whattoeat.recipes.filter.title=Filtrovat:
 cz.afrosoft.whattoeat.recipes.actions.title=Akce
 cz.afrosoft.whattoeat.recipes.actions.view=Z
 cz.afrosoft.whattoeat.recipes.actions.add=P
+cz.afrosoft.whattoeat.recipes.actions.edit=E
+cz.afrosoft.whattoeat.recipes.actions.delete=S
 
 cz.afrosoft.whattoeat.recipes.table.header.ingredientKey=Jm\u00e9no
 cz.afrosoft.whattoeat.recipes.table.header.recipeType=Typ
@@ -29,22 +31,25 @@ cz.afrosoft.whattoeat.recipes.view.ingredients.title=Ingredience
 cz.afrosoft.whattoeat.recipes.view.ingredients.servings=Porc\u00ed:
 cz.afrosoft.whattoeat.recipes.view.ingredients.price=Cena:
 
-cz.afrosoft.whattoeat.recipes.add.ingredientKey=Jm\u00e9no:
+cz.afrosoft.whattoeat.recipes.add.name=Jm\u00e9no:
 cz.afrosoft.whattoeat.recipes.add.type=Typ:
 cz.afrosoft.whattoeat.recipes.add.taste=Chu\u0165:
 cz.afrosoft.whattoeat.recipes.add.time=\u010cas:
 cz.afrosoft.whattoeat.recipes.add.rating=Hodnocen\u00ed:
 cz.afrosoft.whattoeat.recipes.add.keywords=Kl\u00ed\u010dov\u00e1 slova:
 cz.afrosoft.whattoeat.recipes.add.ingredients=Ingredience
-cz.afrosoft.whattoeat.recipes.add.ingredients.ingredientKey=Jm\u00e9no:
+cz.afrosoft.whattoeat.recipes.add.ingredients.name=Jm\u00e9no:
 cz.afrosoft.whattoeat.recipes.add.ingredients.quantity=Mno\u017estv\u00ed:
 cz.afrosoft.whattoeat.recipes.add.preparation=P\u0159\u00edprava
 cz.afrosoft.whattoeat.recipes.add.sideDishes=P\u0159\u00edlohy
-cz.afrosoft.whattoeat.recipes.add.sideDishes.ingredientKey=Jm\u00e9no:
+cz.afrosoft.whattoeat.recipes.add.sideDishes.name=Jm\u00e9no:
+
+cz.afrosoft.whattoeat.dialog.delete.recipe.title=Smazání receptu
+cz.afrosoft.whattoeat.dialog.delete.recipe.messages=Opravdu chcete smazat tento recept?
 
 ## Validations
 cz.afrosoft.whattoeat.recipes.error.null=Recept nem\u016f\u017ee b\u00fdt null.
-cz.afrosoft.whattoeat.recipes.error.ingredientKey.required=Jm\u00e9no mus\u00ed b\u00fdt vypln\u011bno.
+cz.afrosoft.whattoeat.recipes.error.name.required=Jm\u00e9no mus\u00ed b\u00fdt vypln\u011bno.
 cz.afrosoft.whattoeat.recipes.error.type.required=Typ receptu mus\u00ed b\u00fdt vypln\u011bn.
 cz.afrosoft.whattoeat.recipes.error.taste.required=Chu\u0165 receptu mus\u00ed b\u00fdt vypln\u011bna.
 cz.afrosoft.whattoeat.recipes.error.time.required=\u010cas p\u0159\u00edpravy mus\u00ed b\u00fdt vypln\u011bn.
@@ -54,7 +59,7 @@ cz.afrosoft.whattoeat.recipes.error.ingeients=Recept mus\u00ed obsahovat alespo\
 #Recipes end
 
 #RecipeIngredient specific piece conversion recipeIngredient names
-cz.afrosoft.whattoeat.recipeIngredient.piece.conversion.garlic.ingredientKey=\u010desnek
+cz.afrosoft.whattoeat.recipeIngredient.piece.conversion.garlic.name=\u010desnek
 cz.afrosoft.whattoeat.recipeIngredient.piece.conversion.garlic.clove=strou\u017eek
 cz.afrosoft.whattoeat.recipeIngredient.piece.conversion.garlic.bulb=pali\u010dka
 #RecipeIngredient specific piece conversion recipeIngredient names end
@@ -77,8 +82,9 @@ cz.afrosoft.whattoeat.ingredients.dialog.price=Cena za jednotku:
 cz.afrosoft.whattoeat.ingredients.dialog.conversion=Pr\u016fm\u011brn\u00fd po\u010det jednotek na kus:
 cz.afrosoft.whattoeat.ingredients.dialog.keywords=Kl\u00ed\u010dov\u00e1 slova:
 
-cz.afrosoft.whattoeat.dialog.delete.recipeIngredient.title=Smaz\u00e1n\u00ed ingredience
-cz.afrosoft.whattoeat.dialog.delete.recipeIngredient.messages=Opravdu chcete smazat vybranou ingredienci?
+cz.afrosoft.whattoeat.dialog.delete.ingredient.title=Smazání ingredience
+cz.afrosoft.whattoeat.dialog.delete.ingredient.messages=Opravdu chcete smazat tuto ingredienci?
+
 #Ingredients end
 
 #Diet generator
